# python_core_vivin

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/python_core_vivin/: __init__.py  utils.py
tests/: test_utils.py
